--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,43 @@
-html,
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: flaticon;
+  src: url(/public/fonts/Flaticon.woff);
+}
+
+@font-face {
+  font-family: flaticonSecond;
+  src: url(/public/fonts/fontawesome-webfont.woff);
+}
+
+@font-face {
+  font-family: flaticonThird;
+  src: url(/public/fonts/fontawesome-webfont.woff2);
+}
+
+@font-face {
+  font-family: greatVibes;
+  src: url(/public/fonts/GreatVibes-Regular.ttf);
+}
+
+.bg-red-malom {
+  background-color: #D12C12;
+}
+
+.text-red-malom {
+  color: #D12C12;
+}
+
+.section__title {
+  font-size: 40px;
+  font-family: 'Great Vibes', cursive;
+  color: #D12C12;
+  font-weight: 400;
   padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.font-great-vibes {
+  font-family: 'Great Vibes', cursive;
 }
